# MeasureIt

./: .gitignore  .pylintrc  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Connect to IPS 120.ipynb  Gate Leakage Test.ipynb  HOW_TO_GIT.txt  Human_test.md  INSTALL.txt  Keithley 2450 Sweep Demo.ipynb  Keithley_2450.py  Keithley_2450.py.lnk  Lakeshore_331.py  Magnet Sweep.ipynb  Magnetic_Field_Sweep.ipynb  Makefile  MeasureIt.bat  README.md  RealInstruments.ipynb  Simul Sweep Example.ipynb  TODO.md  TODO_meausreitplot.md  __init__.py  auto_follow_peak.ipynb  coverage.xml  cryocooler.ipynb  currentdatabase.db  daq_driver.py  db_testing.ipynb  demo.ipynb  environment.yaml  example_sweep.py  experiments.db  export_to_csv.ipynb  gate_leakage.py  generic sweep script.ipynb  gui_sweep.py  helper.py  immigaration_plan.md  (+16 more)
.github/: copilot-instructions.md
.github/workflows/: pylint.yml  tests.yml
Databases/: .gitignore  testdb.db
Drivers/: Ametek_7230.py  DAQ.py  Dynacool.py  Lakeshore_331.py  Model_340.py  SCM10.py  SWbox3499.py  daq_driver.py
Drivers/Cryocon/: CyroCon24C_ChA_PID_Table_25Ohm.txt  CyroCon24C_ChA_PID_Table_50Ohm.txt  CyroCon24C_ChB_PID_Table.txt  cryocon_24.py
GUI/: .readthedocs.yaml  Compile_UI.py  GUI_Dialogs.py  GUI_Measureit.py  add_device.ui  add_device_ui.py  add_instrument.ui  add_parameter_ui.py  edit_parameter.ui  edit_parameter_ui.py  edit_sweep.ui  handlers.py  local_instruments.py  mainwindow.ui  mainwindow_ui.py  remove_device.ui  remove_device_ui.py  save_data.ui  save_station.ui  view_dataset.ui  view_dataset_ui.py
MeasureItUW.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Origin Files/: .gitignore  insert_name_here.txt
cfg/: .gitignore  daq_output.cfg
databases/: Example_database.db  Example_database.db-shm  Example_database.db-wal  Example_database_2.db  Example_database_2.db-shm  Example_database_2.db-wal  Test_database.db  Test_database.db-shm  Test_database.db-wal
dep/: threaded_sweep.py
deprecated/: example_sweep.py  gui_sweep.py  joe_sweep.py  sweep.py  sweep_window.py  threaded_sweep.py  worker_sweep.py
docs/: mainwindow_ui.py  requirements_doc.txt
docs/source/: Makefile  conf.py  index.rst  intro.rst  make.bat  modules.rst  src.rst
docs/source/MeasureIt/: base_sweep.rst  gate_leakage.rst  heatmap_thread.rst  index.rst  plotter_thread.rst  runner_thread.rst  safe_ramp.rst  simul_sweep.rst  sweep0d.rst  sweep1d.rst  sweep1d_listening.rst  sweep2d.rst  sweep_ips.rst  sweep_queue.rst  tracking.rst  util.rst
docs/source/start/: index.rst
drivers/: Dynacool_opticool.py
examples/: Concatenate_CSV.ipynb  Magnet Sweep.ipynb  Separate_2D_Map.ipynb  Tutorial.ipynb  VTI.ipynb  auto_follow_peak.ipynb  demo.ipynb  export_to_csv.ipynb  export_to_json.ipynb  keithley 2450 script.ipynb  sweep queue test.ipynb
examples/content/: data processing.ipynb  quick start-Copy1.ipynb  quick start.ipynb
src/: DAQ.py  ITC503.py  LM510.py  Model_340.py  Model_372.py  __init__.py  base_sweep.py  daq_driver.py  gate_leakage.py  heatmap_thread.py  plotter_thread.py  runner_thread.py  setup.py  simul_sweep.py  sweep0d.py  sweep1D_listening  sweep1d.py  sweep2d.py  sweep_ips.py  sweep_queue.py  tracking.py  util.py
src/MeasureIt/: __init__.py  _deprecation.py  base_sweep.py  config.py  gate_leakage.py  heatmap_thread.py  heatmap_thread_matplotlib.py  helper.py  plotter_thread.py  runner_thread.py  safe_ramp.py  simul_sweep.py  sweep0d.py  sweep1d.py  sweep1d_listening.py  sweep2d.py  sweep_ips.py  sweep_queue.py  tracking.py  util.py
src/MeasureIt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/MeasureIt/Drivers/: Dynacool.py  HF2LI_xp.py  ITC503.py  Keithley_2450_DW.py  LM510.py  LR.py  Lakeshore_331.py  Model_372.py  NDsweeper.py  SR850.py  SWbox3499.py  VGC403.py  VGC503.py  __init__.py  attodry.py  cryocon_24.py  daq_driver.py
src/MeasureIt/GUI/: GUI_Dialogs.py  GUI_Measureit.py  add_instrument_ui.py  edit_sweep_ui.py  local_instruments.py  remove_instrument.ui  remove_instrument_ui.py  save_data_ui.py  save_station_ui.py
src/MeasureIt/_internal/: __init__.py  plotter_thread.py  runner_thread.py
src/MeasureIt/legacy/: __init__.py  heatmap_thread_matplotlib.py  plotter_thread_matplotlib.py
src/MeasureIt/sweep/: __init__.py  base_sweep.py  gate_leakage.py  simul_sweep.py  sweep0d.py  sweep1d.py  sweep1d_listening.py  sweep2d.py  sweep_ips.py
src/MeasureIt/tools/: __init__.py  safe_ramp.py  sweep_queue.py  tracking.py  util.py
src/MeasureIt/visualization/: __init__.py  heatmap_thread.py  helper.py
src/dep/: gui_sweep.py  nidaq.py  sweep.py  sweep_window.py  threaded_sweep.py
src/measureit/: __init__.py  base_sweep.py  config.py  gate_leakage.py  logging_utils.py  sweep1d.py  sweep1d_listening.py  sweep_ips.py  util.py
src/measureit/Drivers/: M4G.py  (+10 more)
tests/: __init__.py  conftest.py  test_config_paths.py  test_export_json_duplicates.py  test_import_compat.py  test_logging_exports.py  test_metadata_write.py  test_quickstart_sweeps.py  test_sweep.py  test_sweep_validation.py  verify_install.py
tests/e2e/: full_pipeline_failure_test.py  full_pipeline_test.py  test_data_processing.py  test_full_queue_run.py  test_save_data_no_database_e2e.py  test_sweep_execution.py
tests/fixtures/: mock_instruments.py
tests/helpers/: qt_helpers.py  queue_validator.py
tests/integration/: test_queue_execution.py
tests/manual/: test_afm_sweep2d.py
tests/unit/: conftest.py  test_array_params.py  test_array_plot_thread.py  test_base_sweep.py  test_concurrency_guard.py  test_error_handling.py  test_float_precision_error.py  test_heatmap_axis_orientation.py  test_kill_error_sweep.py  test_plotter_thread.py  test_reproduce_upper_bound_bug.py  test_runner_thread.py  test_save_data_no_database.py  test_simul_sweep.py  test_sweep0d.py  test_sweep1d.py  test_sweep1d_ramp_tolerance.py  test_sweep2d.py  test_sweep2d_inner_error.py  test_sweep2d_outer_set_error.py  test_sweep_queue.py  test_sweep_queue_error.py  test_sweep_queue_sweep2d_status.py  test_sweep_registry.py  test_util.py
tools/: check_queue_log.py
(+75 files in other folders)
