[build-system]
requires = ["steuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where["."]
include["./src/MeaureIt*"]
exclude["./tests*", "./src/dep*",]

[project]
name = "MeasureItUW"
version = "0.0.1"
description = "Measurement code for condensed matter groups at UW based on QCoDeS."
readme = {file = "README.md", content-type = "text/markdown"} 
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"]
authors = [
    {name = "Elliott Runburg", email = "erunburg@uw.edu"},
    {name = "Jiaqi Cai", email = "caidish@uw.edu"},
    {name = "Christian Rose"},
    {name = "Jack Barlow", email = "barlowmj@uw.edu"}
]
requires-python = ">=3.9"
dependencies = [
    "nidaqmx",
    "qcodes",
    "Pyqt5",
    "qcodes_contrib_drivers",
    "sphinx",
    "sphinx_rtd_theme"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/nanophys/MeasureIt"
Documentation = "https://measureituw.readthedocs.io/en/latest/?badge=latest"
