[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"measureit.Drivers.data" = ["*.txt"]

[project]
name = "qmeasure"
version = "1.1.2"
description = "Measurement code for condensed matter groups at UW based on QCoDeS."
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
authors = [
    {name = "Jiaqi Cai", email = "jiaqic@mit.edu"},
    {name = "Jack Barlow", email = "barlowmj@uw.edu"},
    {name = "Elliott Runburg", email = "erunburg@uw.edu"},
    {name = "Christian Rose"},
    {name = "Joshua Wang", email = "wangjo@mit.edu"},
]
requires-python = ">=3.8"
dependencies = [
    # Core scientific computing
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "ruamel.yaml>=0.17.0",
    "pandas>=1.3.0",

    # QCoDeS ecosystem
    "qcodes>=0.37.0",
    "qcodes_contrib_drivers>=0.18.0",

    # GUI framework (core includes GUI to keep import-time Qt usage working)
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.13.0",

    # Platform-specific dependencies
    "multipyvu>=1.2.0; platform_system=='Windows'",
    # Path helpers
    "platformdirs>=3.0.0",

    # Jupyter support (required for typical workflow)
    "ipykernel>=6.29.0,!=7.*",  # Exclude 7.x due to event-loop bug with Qt
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0",
]

# Documentation dependencies
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=0.18.0",
]

# Jupyter notebook support
jupyter = [
    "jupyterlab>=3.4.0",
    "notebook>=6.4.0",
    "ipykernel>=6.29.0,!=7.*",
    "ipython>=8.0.0,<10",  # Tested with 8.x and 9.6
    "jupyter_client>=7.3.0",
    "jupyter_core>=4.11.0",
    "traitlets>=5.3.0",
    "ipython_genutils>=0.2.0",
]

# Windows-specific dependencies
windows = [
    "pywin32>=304; platform_system=='Windows'",
]

# Optional instrument/driver dependencies
drivers = [
    "nidaqmx>=0.6.0",
    "zhinst>=21.8.0",
]

# GUI add-ons (kept minimal since core already depends on PyQt5 + pyqtgraph)
gui = []

# All optional dependencies (union of the above)
all = [
    # dev
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=2.20.0",
    # docs
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=0.18.0",
    # jupyter
    "jupyterlab>=3.4.0",
    "notebook>=6.4.0",
    "ipykernel>=6.29.0,!=7.*",
    "ipython>=8.0.0,<10",
    "jupyter_client>=7.3.0",
    "jupyter_core>=4.11.0",
    "traitlets>=5.3.0",
    "ipython_genutils>=0.2.0",
    # windows
    "pywin32>=304; platform_system=='Windows'",
    # drivers
    "nidaqmx>=0.6.0",
    "zhinst>=21.8.0",
]

[project.urls]
Repository = "https://github.com/nanophys/MeasureIt"
Documentation = "https://measureituw.readthedocs.io/en/latest/?badge=latest"
"Bug Reports" = "https://github.com/nanophys/MeasureIt/issues"
"Contributing" = "https://github.com/nanophys/MeasureIt/blob/main/CONTRIBUTING.md"

# Console scripts
# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/measureit",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI",
]

[tool.coverage.run]
source = ["src/measureit"]
omit = [
    "*/tests/*",
    "*/GUI/*_ui.py",  # Auto-generated UI files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring requirements in tests
"*_ui.py" = ["ALL"]  # Ignore all rules for auto-generated UI files

[tool.ruff.lint.isort]
known-first-party = ["measureit"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["*_ui.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    ".*_ui\\.py$",  # Auto-generated UI files
]

[[tool.mypy.overrides]]
module = [
    "qcodes.*",
    "nidaqmx.*",
    "zhinst.*",
    "multipyvu.*",
    "PyQt5.*",
]
ignore_missing_imports = true

# UV configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# For development, use local editable install
measureit = { workspace = true }
